# jokeai

./: .env.template  .gitignore  README.md  docker-compose.yml
client/: Dockerfile  main.py  pyproject.toml
client/config/: settings.py
client/services/: client.py
client/tests/: test_client.py
client/utils/: translator.py
server/: Dockerfile  main.py  pyproject.toml
server/config/: logging_config.py
server/core/: websocket_manager.py
server/routes/: dashboard.py  websocket.py
server/templates/: index.html  style.css
server/tests/: test_routes.py
server/utils/: generate_joke.py
